// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listReducer add element to list 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add element to list twice - no duplicates allowed 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
        "description": "some-description-1",
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer add lists 1`] = `
Array [
  Object {
    "description": "a description 1",
    "id": "some-id-1",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "description": "a description 2",
    "id": "some-id-2",
    "list": Array [],
    "owner": null,
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists by type 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "description": "",
    "id": "some-id-3",
    "list": Array [],
    "owner": null,
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [],
    "owner": "some-owner",
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
  Object {
    "description": "",
    "id": "some-id-3",
    "list": Array [],
    "owner": "some-owner",
    "title": "some list 3",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer get lists for owner 2`] = `Array []`;

exports[`listReducer insert element at specific pos in list 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
      },
      Object {
        "book": Object {
          "pid": "pid3",
        },
      },
      Object {
        "book": Object {
          "pid": "pid2",
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove element from list 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid2",
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer remove list 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-2",
    "list": Array [],
    "owner": null,
    "title": "some list 2",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 1`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [
      Object {
        "book": Object {
          "pid": "pid1",
        },
      },
    ],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;

exports[`listReducer toggle element in list 2`] = `
Array [
  Object {
    "description": "",
    "id": "some-id-1",
    "list": Array [],
    "owner": null,
    "title": "some list 1",
    "type": "CUSTOM_LIST",
  },
]
`;
